fixed README chunks

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,7 @@ If you are already familiar with `mlr3tuning`, then the only change compared to 
 Afterwards, you can handle hyperband like all other tuners:
 
 ```
+library(paradox)
 library(mlr3hyperband)
 
 # give a hyperparameter the "budget" tag
@@ -65,7 +66,9 @@ Originally, hyperband was created with a "natural" learning parameter as the bud
 
 ```
 library(mlr3hyperband)
+library(mlr3tuning)
 library(mlr3learners)
+library(mlr3)
 set.seed(123)
 
 # define hyperparameter and budget parameter for tuning with hyperband
