convert README into .Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,9 @@
+
+---
+output: github_document
+---
+
+
 # mlr3hyperband
 
 Extends the [mlr3](https://mlr3.mlr-org.com) package with hyperband tuning.
