--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ Extends the [mlr3](https://mlr3.mlr-org.com) package with hyperband tuning.
 
 Install from github by running the following line:
 
-```r
+```{r, eval = FALSE}
 remotes::install_github("mlr-org/mlr3hyperband")
 ```
 
@@ -30,7 +30,7 @@ remotes::install_github("mlr-org/mlr3hyperband")
 If you are already familiar with `mlr3tuning`, then the only change compared to other tuners is to give a numeric hyperparameter a `"budget"` tag.
 Afterwards, you can handle hyperband like all other tuners:
 
-```r
+```{r, eval = FALSE}
 library(paradox)
 library(mlr3tuning)
 library(mlr3hyperband)
@@ -42,13 +42,13 @@ params = list(
   ParamFct$new("booster", levels = c("gbtree", "gblinear", "dart"))
 )
 
-#inst = ... here goes the usual mlr3tuning TuningInstance constructor
+inst = ...  # here goes the usual mlr3tuning TuningInstance constructor
 
 # initialize hyperband tuner
 tuner = tnr("hyperband", eta = 2L)
 
 # tune the previously defined TuningInstance
-# tuner$optimize(inst)
+tuner$optimize(inst)
 ```
 
 For the full working example, please check out the Examples section below.
@@ -71,11 +71,12 @@ An alternative approach using subsampling and pipelines is described further bel
 
 Originally, hyperband was created with a "natural" learning parameter as the budget parameter in mind, like `nrounds` of the XGBoost learner:
 
-```r
-library(mlr3hyperband)
-library(mlr3tuning)
-library(mlr3learners)
+```{r}
 library(mlr3)
+library(mlr3hyperband) # hyperband tuner
+library(mlr3tuning) # tuning methods
+library(mlr3learners) # xgboost learner
+library(paradox) # search space definition
 set.seed(123)
 
 # define hyperparameter and budget parameter for tuning with hyperband
@@ -108,8 +109,7 @@ Additionally, it is also possible to use `mlr3hyperband` to tune learners that d
 In such a case `mlr3pipelines` can be used to define data subsampling as a preprocessing step.
 Then, the `frac` parameter of subsampling, defining the fraction of the training data to be used, can act as the budget parameter:
 
-```r
-library(mlr3hyperband)
+```{r}
 library(mlr3pipelines)
 set.seed(123)
 
