--- a/inst/references.bib
+++ b/inst/references.bib
@@ -6,5 +6,5 @@
   volume  = {18},
   number  = {185},
   pages   = {1-52},
-  url     = {http://jmlr.org/papers/v18/16-558.html}
+  url     = {https://jmlr.org/papers/v18/16-558.html}
 }
