--- a/README.Rmd
+++ b/README.Rmd
@@ -90,6 +90,8 @@ instance = tune(
 instance$result
 ```
 
+### Subsampling
+
 Additionally, it is also possible to use `mlr3hyperband` to tune learners that do not have a natural fidelity parameter.
 In such a case `mlr3pipelines` can be used to define data subsampling as a preprocessing step.
 Then, the `frac` parameter of subsampling, defining the fraction of the training data to be used, can act as the budget parameter.
@@ -112,6 +114,33 @@ instance = tune(
   method = "hyperband",
   task = tsk("pima"),
   learner = learner,
+  resampling = rsmp("cv", folds = 3),
+  measure = msr("classif.ce"),
+  search_space = search_space
+)
+
+# best performing hyperparameter configuration
+instance$result
+```
+
+### Successive Halving
+
+```{r, message = FALSE}
+library(mlr3hyperband)
+library(mlr3learners)
+
+# define hyperparameter and budget parameter
+search_space = ps(
+  nrounds = p_int(lower = 1, upper = 16, tags = "budget"),
+  eta = p_dbl(lower = 0, upper = 1),
+  booster = p_fct(levels = c("gbtree", "gblinear", "dart"))
+)
+
+# hyperparameter tuning on the pima indians diabetes data set
+instance = tune(
+  method = "successive_halving",
+  task = tsk("pima"),
+  learner = lrn("classif.xgboost", eval_metric = "logloss"),
   resampling = rsmp("cv", folds = 3),
   measure = msr("classif.ce"),
   search_space = search_space
