add repeating to sh and hyperband

--- a/README.Rmd
+++ b/README.Rmd
@@ -87,7 +87,7 @@ instance = tune(
   task = tsk("pima"),
   learner = lrn("classif.xgboost", eval_metric = "logloss"),
   resampling = rsmp("cv", folds = 3),
-  measure = msr("classif.ce"),
+  measures = msr("classif.ce"),
   search_space = search_space
 )
 
@@ -117,7 +117,7 @@ instance = tune(
   task = tsk("pima"),
   learner = learner,
   resampling = rsmp("cv", folds = 3),
-  measure = msr("classif.ce"),
+  measures = msr("classif.ce"),
   search_space = search_space
 )
 
@@ -144,7 +144,7 @@ instance = tune(
   task = tsk("pima"),
   learner = lrn("classif.xgboost", eval_metric = "logloss"),
   resampling = rsmp("cv", folds = 3),
-  measure = msr("classif.ce"),
+  measures = msr("classif.ce"),
   search_space = search_space
 )
 
