--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,22 @@ Package website: [release](https://mlr3hyperband.mlr-org.com/) | [dev](https://m
 [![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
 <!-- badges: end -->
 
-This package provides hyperband tuning for [`mlr3`](https://mlr3.mlr-org.com).
+`mlr3hyperband` extends the [mlr3tuning](https://mlr3tuning.mlr-org.com/) package with various multifidelity optimization methods based on successive halving algorithm.
+It currently provides the following optimizers for [bbotk](https://bbotk.mlr-org.com/) and tuner for [mlr3tuning](https://mlr3tuning.mlr-org.com/):
+
+* Successive Halving (`OptimizerSuccessiveHalving` & `TunerSuccessiveHalving`)
+* Asynchronous Successive Halving (`OptimizerAsha` & `TunerAsha`)
+* Hyperband (`OptimizerSuccessiveHalving` & `TunerSuccessiveHalving`)
+* Asynchronous Hyperband (`OptimizerAhb` & `TunerAhb`)
+
+## Resources
+
+* mlr3book chapter on [hyperband](https://mlr3book.mlr-org.com/optimization.html#hyperband)
+and [hyperparameter tuning](https://mlr3book.mlr-org.com/optimization.html#tuning).
+* The original publications introducing the [successive halving](https://arxiv.org/abs/1502.07943),
+[hyperband](https://arxiv.org/abs/1603.06560) and [asha](https://arxiv.org/abs/1810.05934) algorithm.
+* Ask questions on [Stackoverflow (tag #mlr3)](https://stackoverflow.com/questions/tagged/mlr3)
+
 
 ## Installation
 
@@ -36,24 +51,6 @@ Install the development version from GitHub:
 remotes::install_github("mlr-org/mlr3hyperband")
 ```
 
-## Resources
-
-* mlr3book chapter on [hyperband](https://mlr3book.mlr-org.com/optimization.html#hyperband)
-and [hyperparameter tuning](https://mlr3book.mlr-org.com/optimization.html#tuning).
-* The original [paper](https://arxiv.org/abs/1603.06560) introducing the hyperband algorithm.
-
-## Hyperband
-
-Hyperband is a budget oriented-procedure, weeding out suboptimally performing configurations early on during their training process aiming at increasing the efficiency of the tuning procedure.
-For this, several brackets are constructed with an associated set of configurations for each bracket.
-These configuration are initialized by stochastic, often uniform, sampling.
-Each bracket is divided into multiple stages, and configurations are evaluated for a increasing budget in each stage.
-Note that currently all configurations are trained completely from the beginning, so no online updates to the models are performed.
-
-Different brackets are initialized with different number of configurations, and different budget sizes.
-To identify the budget for evaluating hyperband, the user has to specify explicitly which hyperparameter of the learner influences the budget by tagging a single hyperparameter in the parameter set with `"budget"`.
-An alternative approach using subsampling and pipelines is described further below.
-
 ## Examples
 
 ```{r, include = FALSE}
@@ -63,9 +60,60 @@ library(mlr3hyperband)
 library(mlr3learners)
 ```
 
-### Basic
+### Successive Halving
 
-If you are already familiar with `mlr3tuning`, then the only change compared to other tuners is to give a numeric hyperparameter a `budget` tag.
+Successive halving starts with minimum budget and a given, fixed number of `n` candidates and races them down in stages to a single best candidate by repeatedly evaluating all candidates with increased budgets in a certain schedule.
+The budget is increased by a factor of `eta` and only the best `1 / eta ` fraction of candidates is promoted to the next stage.
+The budget hyperparameter must be tagged with `"budget"` in the search space.
+The minimum and maximum budget is set by the lower and upper bound of the budget parameter.
+
+```{r, message = FALSE}
+library(mlr3hyperband)
+library(mlr3learners)
+
+# define hyperparameter and budget parameter
+search_space = ps(
+  nrounds = p_int(lower = 1, upper = 16, tags = "budget"),
+  eta = p_dbl(lower = 0, upper = 1),
+  booster = p_fct(levels = c("gbtree", "gblinear", "dart"))
+)
+
+# hyperparameter tuning on the pima indians diabetes data set
+instance = tune(
+  method = "successive_halving",
+  task = tsk("pima"),
+  learner = lrn("classif.xgboost", eval_metric = "logloss"),
+  resampling = rsmp("cv", folds = 3),
+  measures = msr("classif.ce"),
+  search_space = search_space
+)
+
+# best performing hyperparameter configuration
+instance$result
+```
+
+
+### Hyperband
+
+Hyperband repeatedly calls successive halving with different numbers of starting configurations.
+Each run of SH within hyperband is called a bracket.
+All brackets spend approximately the same budget i.e. a larger number of starting configurations corresponds to a smaller budget allocated in the base stage.
+Use `hyperband_schedule()` to get a preview of the bracket layout.
+
+|   s |     |   3 |     |     |   2 |     |     |   1 |     |     |   0 |
+| ---:| ---:| ---:| --- | ---:| ---:| --- | ---:| ---:| --- | ---:| ---:|
+|   i |  ni |  ri |     |  ni |  ri |     |  ni |  ri |     |  ni |  ri |
+|   0 |   8 |   1 |     |   6 |   2 |     |   4 |   4 |     |   8 |   4 |
+|   1 |   4 |   2 |     |   3 |   4 |     |   2 |   8 |     |     |     |
+|   2 |   2 |   4 |     |   1 |   8 |     |     |     |     |     |     |
+|   3 |   1 |   8 |     |     |     |     |     |     |     |     |     |
+
+
+The budget hyperparameter must be tagged with `"budget"` in the search space.
+The minimum and maximum budget is set by the lower and upper bound of the budget parameter.
+An alternative approach using subsampling is described further below.
+
+If you are already familiar with `mlr3tuning`, then the only change compared to other tuners is to give a numeric hyperparameter a `"budget"` tag.
 Afterwards, you can handle hyperband like all other tuners.
 Originally, hyperband was created with a “natural” learning parameter as the budget parameter in mind, like `nrounds` of the XGBoost learner.
 
@@ -95,9 +143,9 @@ instance = tune(
 instance$result
 ```
 
-### Subsampling
+### Hyperband and Subsampling
 
-Additionally, it is also possible to use `mlr3hyperband` to tune learners that do not have a natural fidelity parameter.
+It is also possible to tune learners that do not have a natural fidelity parameter.
 In such a case `mlr3pipelines` can be used to define data subsampling as a preprocessing step.
 Then, the `frac` parameter of subsampling, defining the fraction of the training data to be used, can act as the budget parameter.
 
@@ -125,11 +173,20 @@ instance = tune(
 instance$result
 ```
 
-### Successive Halving
+### Asynchronous Successive Halving
+
+Asynchronous successive halving (ASHA) parallelizes SHA by promoting candidates to the next stage as soon as possible instead of waiting for all candidates in the stage to finish.
+ASHA starts with sampling a candidate points for each available worker.
+When an evaluation finishes and the worker is available again, ASHA checks the stages from top to bottom for promotable candidates.
+Promotions are possible when the evaluated candidates belong to the top `1 / eta` of each stage.
+If no promotions are possible, a new candidate is sampled and added to the base stage, which increases the number of possible promotions for all stages.
+Asha needs a parallel backend which is supplied with `future::plan()`.
 
 ```{r, message = FALSE}
 library(mlr3hyperband)
 library(mlr3learners)
+
+future::plan("multisession")
 
 # define hyperparameter and budget parameter
 search_space = ps(
@@ -140,12 +197,13 @@ search_space = ps(
 
 # hyperparameter tuning on the pima indians diabetes data set
 instance = tune(
-  method = "successive_halving",
+  method = "asha",
   task = tsk("pima"),
   learner = lrn("classif.xgboost", eval_metric = "logloss"),
   resampling = rsmp("cv", folds = 3),
   measures = msr("classif.ce"),
-  search_space = search_space
+  search_space = search_space,
+  term_evals = 100
 )
 
 # best performing hyperparameter configuration
