docs: bb_optimize in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -58,6 +58,7 @@ An alternative approach using subsampling and pipelines is described further bel
 
 ```{r, include = FALSE}
 # mute load messages
+library(bbotk)
 library(mlr3verse)
 library(mlr3hyperband)
 library(mlr3learners)
@@ -150,4 +151,34 @@ instance = tune(
 
 # best performing hyperparameter configuration
 instance$result
+```
+
+### Quick general-purpose optimization
+
+```{r, message = FALSE}
+library(bbotk)
+library(mlr3hyperband)
+
+# define hyperparameter and budget parameter
+search_space = domain = ps(
+  x1 = p_dbl(-5, 10),
+  x2 = p_dbl(0, 15),
+  fidelity = p_dbl(1e-2, 1, tags = "budget")
+)
+
+# modified branin function
+objective = ObjectiveRFun$new(
+  fun = branin,
+  domain = domain,
+  codomain = ps(y = p_dbl(tags = "minimize"))
+)
+
+# optimize branin function with hyperband
+result = bb_optimize(objective, method = "hyperband", search_space = search_space, term_evals = NULL)
+
+# optimized parameters
+result$par
+
+# optimal outcome
+result$value
 ```
