docs: update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,15 +1,34 @@
 ---
 output: github_document
+bibliography: references.bib
 ---
 
 ```{r, include = FALSE}
-lgr::get_logger("mlr3")$set_threshold("error")
-lgr::get_logger("bbotk")$set_threshold("error")
-set.seed(1)
-options(datatable.print.class = FALSE, datatable.print.keys = FALSE, width = 200)
+library(mlr3misc)
+library(utils)
+library(mlr3tuningspaces)
+library(data.table)
+source("R/bibentries.R")
+writeLines(toBibtex(bibentries), "references.bib")
+
+lgr::get_logger("mlr3")$set_threshold("warn")
+lgr::get_logger("bbotk")$set_threshold("warn")
+set.seed(0)
+options(
+  datatable.print.nrows = 10,
+  datatable.print.class = FALSE,
+  datatable.print.keys = FALSE,
+  datatable.print.trunc.cols = TRUE,
+  width = 100)
+
+# mute load messages
+library(bbotk)
+library(mlr3verse)
+library(mlr3hyperband)
+library(mlr3learners)
 ```
 
-# mlr3hyperband
+# mlr3hyperband <img src="man/figures/logo.png" align="right" width = "120" />
 
 Package website: [release](https://mlr3hyperband.mlr-org.com/) | [dev](https://mlr3hyperband.mlr-org.com/dev/)
 
@@ -20,19 +39,9 @@ Package website: [release](https://mlr3hyperband.mlr-org.com/) | [dev](https://m
 [![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
 <!-- badges: end -->
 
-`mlr3hyperband` extends the [mlr3tuning](https://mlr3tuning.mlr-org.com/) package with multifidelity optimization methods based on the successive halving algorithm.
-It currently provides the following optimizers for [bbotk](https://bbotk.mlr-org.com/) and tuner for [mlr3tuning](https://mlr3tuning.mlr-org.com/):
-
-* Successive Halving (`OptimizerSuccessiveHalving` & `TunerSuccessiveHalving`)
-* Hyperband (`OptimizerSuccessiveHalving` & `TunerSuccessiveHalving`)
-
-## Resources
-
-* mlr3book chapter on [hyperband](https://mlr3book.mlr-org.com/optimization.html#hyperband)
-and [hyperparameter tuning](https://mlr3book.mlr-org.com/optimization.html#tuning).
-* The original publications introducing the [successive halving](https://arxiv.org/abs/1502.07943) and
-[hyperband](https://arxiv.org/abs/1603.06560).
-* Ask questions on [Stackoverflow (tag #mlr3)](https://stackoverflow.com/questions/tagged/mlr3)
+*mlr3hyperband* adds the optimization algorithms Successive Halving [@jamieson_2016] and Hyperband [@li_2018] to the [mlr3](https://mlr-org.com/) ecosystem.
+The implementation in mlr3hyperband features improved scheduling and parallelizes the evaluation of configurations.
+The package includes tuners for hyperparameter optimization in [mlr3tuning](https://github.com/mlr-org/mlr3tuning) and optimizers for black-box optimization in [bbotk](https://github.com/mlr-org/bbotk).
 
 ## Installation
 
@@ -50,21 +59,14 @@ remotes::install_github("mlr-org/mlr3hyperband")
 
 ## Examples
 
-### Basic
-
-```{r, include = FALSE}
-# mute load messages
-library(bbotk)
-library(mlr3verse)
-library(mlr3hyperband)
-library(mlr3learners)
-```
+We optimize the hyperparameters of an XGBoost model on the [Sonar](https://mlr3.mlr-org.com/reference/mlr_tasks_sonar.html) data set.
+The number of boosting rounds `nrounds` is the fidelity parameter.
+We tag this parameter with `"budget"` in the search space.
 
 ```{r}
 library(mlr3hyperband)
 library(mlr3learners)
 
-# load learner, define search space and tag budget hyperparameter
 learner = lrn("classif.xgboost",
   nrounds           = to_tune(p_int(27, 243, tags = "budget")),
   eta               = to_tune(1e-4, 1, logscale = TRUE),
@@ -75,11 +77,11 @@ learner = lrn("classif.xgboost",
   alpha             = to_tune(1e-3, 1e3, logscale = TRUE),
   subsample         = to_tune(1e-1, 1)
 )
+```
 
-# set parallel backend
-future::plan("multisession")
+We use the `tune()` function to run the optimization.
 
-# hyperparameter tuning on the pima indians diabetes data set
+```{r}
 instance = tune(
   method = "hyperband",
   task = tsk("pima"),
@@ -90,67 +92,24 @@ instance = tune(
 )
 ```
 
-### Subsample
+The instance contains the best-performing hyperparameter configuration.
 
 ```{r}
-library(mlr3hyperband)
-library(mlr3learners)
-library(mlr3pipelines)
-
-# load learner and define search space
-learner = lrn("classif.rpart",
-  minsplit  = to_tune(2, 128, logscale = TRUE),
-  minbucket = to_tune(1, 64, logscale = TRUE),
-  cp        = to_tune(1e-04, 1e-1, logscale = TRUE)
-)
-
-# create graph learner with subsampling
-graph_learner = as_learner(po("subsample") %>>% learner)
-
-# increase subsample rate from ~ 3.4% to 100%
-graph_learner$param_set$values$subsample.frac = to_tune(p_dbl(3^-3, 1, tags = "budget"))
-
-# set parallel backend
-future::plan("multisession")
-
-# hyperparameter tuning on the spam data set
-instance = tune(
-  method = "hyperband",
-  task = tsk("spam"),
-  learner = graph_learner,
-  resampling = rsmp("cv", folds = 3),
-  measures = msr("classif.ce"),
-  eta = 3
-)
+instance$result
 ```
 
-### Quick general-purpose optimization
+The archive contains all evaluated hyperparameter configurations.
+Hyperband adds the `"stage"` and `"braket"`.
 
-```{r, message = FALSE}
-library(bbotk)
-library(mlr3hyperband)
-
-# define hyperparameter and budget parameter
-search_space = domain = ps(
-  x1        = p_dbl(-5, 10),
-  x2        = p_dbl(0, 15),
-  fidelity  = p_dbl(1e-2, 1, tags = "budget")
-)
-
-# modified branin function
-objective = ObjectiveRFun$new(
-  fun = branin,
-  domain = domain,
-  codomain = ps(y = p_dbl(tags = "minimize"))
-)
-
-# optimize branin function with hyperband
-result = bb_optimize(objective, method = "hyperband", search_space = search_space,
-  term_evals = NULL, eta = 2)
-
-# optimized parameters
-result$par
-
-# optimal outcome
-result$value
+```{r}
+as.data.table(instance$archive)[, .(stage, bracket, classif.ce, nrounds)]
 ```
+
+We fit a final model with optimized hyperparameters to make predictions on new data.
+
+```{r}
+learner$param_set$values = instance$result_learner_param_vals
+learner$train(tsk("sonar"))
+```
+
+## References
