refactor_ adapt to mlr3tuning 0.18.0

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,6 +43,15 @@ Package website: [release](https://mlr3hyperband.mlr-org.com/) | [dev](https://m
 The implementation in mlr3hyperband features improved scheduling and parallelizes the evaluation of configurations.
 The package includes tuners for hyperparameter optimization in [mlr3tuning](https://github.com/mlr-org/mlr3tuning) and optimizers for black-box optimization in [bbotk](https://github.com/mlr-org/bbotk).
 
+## Resources
+
+There are several sections about hyperparameter optimization in the [mlr3book](https://mlr3book.mlr-org.com).
+
+The [gallery](https://mlr-org.com/gallery.html) features a series of case studies on Hyperband.
+
+* [Tune](https://mlr-org.com/gallery/series/2023-01-15-hyperband-xgboost/) the hyperparameters of XGBoost with Hyperband
+* Use data [subsampling](https://mlr-org.com/gallery/series/2023-01-16-hyperband-subsampling/) and Hyperband to optimize a support vector machine.
+
 ## Installation
 
 Install the last release from CRAN:
@@ -56,13 +65,6 @@ Install the development version from GitHub:
 ```{r, eval = FALSE}
 remotes::install_github("mlr-org/mlr3hyperband")
 ```
-
-## Resources
-
-The [gallery](https://mlr-org.com/gallery.html) features a series of case studies on Hyperband.
-
-* [Tune](https://mlr-org.com/gallery/series/2023-01-15-hyperband-xgboost/) the hyperparameters of XGBoost with Hyperband
-* Use data [subsampling](https://mlr-org.com/gallery/series/2023-01-16-hyperband-subsampling/) and Hyperband to optimize a support vector machine.
 
 ## Examples
 
