--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,6 @@ Package website: [release](https://mlr3hyperband.mlr-org.com/) | [dev](https://m
 <!-- badges: start -->
 [![r-cmd-check](https://github.com/mlr-org/mlr3hyperband/actions/workflows/r-cmd-check.yml/badge.svg)](https://github.com/mlr-org/mlr3hyperband/actions/workflows/r-cmd-check.yml)
 [![CRAN Status](https://www.r-pkg.org/badges/version-ago/mlr3hyperband)](https://cran.r-project.org/package=mlr3hyperband)
-[![StackOverflow](https://img.shields.io/badge/stackoverflow-mlr3-orange.svg)](https://stackoverflow.com/questions/tagged/mlr3)
 [![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
 <!-- badges: end -->
 
@@ -52,6 +51,8 @@ The [gallery](https://mlr-org.com/gallery.html) features a series of case studie
 * [Tune](https://mlr-org.com/gallery/series/2023-01-15-hyperband-xgboost/) the hyperparameters of XGBoost with Hyperband
 * Use data [subsampling](https://mlr-org.com/gallery/series/2023-01-16-hyperband-subsampling/) and Hyperband to optimize a support vector machine.
 
+The website features a benchmark about the performance of [asynchronous successive halving](https://mlr-org.com/benchmarks/benchmarks_async.html).
+
 ## Installation
 
 Install the last release from CRAN:
@@ -63,7 +64,7 @@ install.packages("mlr3hyperband")
 Install the development version from GitHub:
 
 ```{r, eval = FALSE}
-remotes::install_github("mlr-org/mlr3hyperband")
+pak::pak("mlr-org/mlr3hyperband")
 ```
 
 ## Examples
